# llm-council

./: =12.0  pyproject.toml
backend/: auth.py  config.py  main.py  middleware.py  openai_realtime.py  storage.py  tts.py  users.py  voice.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  ProtectedRoute.jsx  Sidebar.css  Sidebar.jsx  VoiceButton.css  VoiceButton.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useVoiceChat.js
frontend/src/pages/: AdminPage.css  AdminPage.jsx  LoginPage.css  LoginPage.jsx
